fix(project-manager): long task texts was not wrapping

--- a/src/modules/project-manager/components/Tasks/tasks.module.css
+++ b/src/modules/project-manager/components/Tasks/tasks.module.css
@@ -58,10 +58,10 @@
             
             justify-content: space-between;
 
-            >span {
-                flex-grow: 1;
-                margin-right: 0.5rem;
+            >p {
+                margin-right: 1rem;
                 font-size: clamp(0.875rem, 0.494rem + 1.905vw, 1rem);
+                word-break:break-all
             }
 
             >button {
